2003-06-19  Matti Aarnio  <mea@zmailer.org>

	* transports/smtp/smtptls.c:
	    When there was no logging file of any kind, this used to
	    send TLS related diagnostics to the scheduler's log, which
	    didn't work very nicely in one of my systems..
	    Now changed so that if there is verbose-log, printouts go
	    there, and independent of that, if there is smtp transport-agent
	    log,  printouts go also there.  If there are neither, nothing is
	    printed.

2003-06-17  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/policytest.c:
	    If MAIL FROM test had  'rejectsource -' and/or 'freezesource -'
	    attributes in  'user@do.main'  lookup, disable lookups of those
	    same things from fallbacks of 'do.main'  lookup.

	* transports/mailbox/mailbox.c, transports/libta/mimeheaders.c,
	  include/ta.h, transports/smtp/smtp.c:
	    Track a bit more of allocated memory chunks, and provide
	    explicite free() routines for them. (Hunting originally
	    memory leaks in  mailbox.)

	* transports/mailbox/mailbox.c, man/mailbox.8.in:
	    Added option "-F edquot"  to instantly fatalify quota-exceed
	    condition of the baseline code.

	* libc/getaddrinfo-test.c:
	    Another test-harness..

2003-06-09  Matti Aarnio  <mea@zmailer.org>

	* configure.in:
	    Mark version 2.99.56-pre7

	* include/libz.h, include/shmmib.h, lib/fdstatfs-test.c,
	  lib/fdstatfs.c, lib/zshmmibattach.c, router/daemonsub.c,
	  scheduler/mailq.inc, scheduler/scheduler.c, smtpserver/smtpcmds.c,
	  smtpserver/smtpdata.c, smtpserver/smtpserver.h:
	    - When wanting to add used spool space gauges into
	      SHM segment header, realized that it does not have
	      32 spare uint variables..  Oops..  Had to change
	      block layout -> new MAGIC, full rearrancement of all
	      so far accumulated small counters, etc..
	    - renamed  fd_statfs()  into  free_fd_statfs(), and
	      added a cousin for it:  used_fd_statfs().  Both return